fix alignment

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -38,7 +38,8 @@ body {
   font-family: sans-serif;
   display: flex;
   justify-content: center;
-  margin-top: 50px;
+  margin-top: 5px;
+  margin-left: 10px;
   display: grid;
   grid-template-columns: auto auto;
   gap: 0.5em 2em;
